Melhorias gerais e conexão App com back end
Login, JWT, Sincronização e upload de dados app funcional

--- a/Front/TccApp-Web/angular.json
+++ b/Front/TccApp-Web/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ProEventos-App": {
+    "TccApp-Web": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ProEventos-App",
+            "outputPath": "dist/TccApp-Web",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ProEventos-App:build"
+            "browserTarget": "TccApp-Web:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ProEventos-App:build:production"
+              "browserTarget": "TccApp-Web:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ProEventos-App:build"
+            "browserTarget": "TccApp-Web:build"
           }
         },
         "test": {
@@ -116,18 +116,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ProEventos-App:serve"
+            "devServerTarget": "TccApp-Web:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ProEventos-App:serve:production"
+              "devServerTarget": "TccApp-Web:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ProEventos-App",
+  "defaultProject": "TccApp-Web",
   "cli": {
     "analytics": false
   }
