--- a/Front/TccApp-Web/package.json
+++ b/Front/TccApp-Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pro-eventos-app",
+  "name": "Tcc-web",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -24,6 +24,7 @@
     "bootswatch": "^4.6.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-currency": "^2.5.2",
+    "ngx-mask": "^16.0.3",
     "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.5.5",
@@ -34,9 +35,9 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
