--- a/Back/src/Tcc.API/Tcc.API.csproj
+++ b/Back/src/Tcc.API/Tcc.API.csproj
@@ -23,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Folder Include="Resources\Associado\" />
+    <Folder Include="Resources\Vistorias\" />
   </ItemGroup>
 
   <ItemGroup>
